@@ -27,7 +27,6 @@ class DcpAppletWidget;
 class DcpAppletObject;
 class MLabel;
 class MAction;
-class MDismissEvent;
 
 class DcpAppletPage : public DcpPage
 {
@@ -46,11 +45,10 @@ public:
     static DcpAppletWidget* constructAppletWidget (DcpAppletObject* applet,
                                              DcpPage* page, int widgetId);
 
-    bool preventQuit();
+    virtual bool preventQuit();
 
 protected:
     virtual void retranslateUi ();
-    virtual void dismissEvent (MDismissEvent *event);
 
 private:
     void loadWidget (int widgetId);
