@@ -150,3 +150,7 @@ void PageFactory::enableUpdates (bool enable)
     Q_UNUSED (enable);
 }
 
+void PageFactory::enablePageChange (bool)
+{
+}
+
